# zeroclaw

./: .gitignore  Cargo.toml  Dockerfile.sam
crates/zeroclaw-a2a-outbox/: Cargo.toml
crates/zeroclaw-a2a-outbox/migrations/: 20260419000001_create_outbox.sql  20260419000002_create_inbox_events.sql  20260419000003_create_push_notification_configs.sql  20260420000001_create_a2a_delegations.sql  20260421000001_add_a2a_delegations_channel_sender.sql
crates/zeroclaw-a2a-outbox/src/: lib.rs  migrate.rs  push_sender.rs  record.rs  retry.rs  store.rs  worker.rs
crates/zeroclaw-a2a-outbox/tests/: push_sender_integration.rs  store_integration.rs  worker_integration.rs
crates/zeroclaw-core/: Cargo.toml
crates/zeroclaw-core/src/: lib.rs
crates/zeroclaw-core/src/a2a/: card.rs  delegation.rs  mod.rs  runner.rs  sam_executor.rs  wake_channel.rs  walter_executor.rs  webhook.rs
crates/zeroclaw-core/tests/: delegation_integration.rs  webhook_integration.rs
docs/: channels-reference.md
docs/project/: README.md  sam-screenshot-terminal-vision-turn-2026-04-12.md
docs/sam-skills/: daily-meeting-summary-design.md  wiki-management-design.md
k8s/sam/: 02_zeroclaw_vso_vault.yaml  03_zeroclaw_configmap.yaml  04_zeroclaw_sandbox.yaml  05_zeroclaw_identity_configmap.yaml  05_zeroclaw_service.yaml  06_zeroclaw_networkpolicy.yaml  13_zeroclaw_skills_configmap.yaml  17_signal_cli_daemon_deployment.yaml  20_vikunja_tool_configmap.yaml  21_meeting_summary_skill_configmap.yaml  22_science_curator_skill_configmap.yaml  23_browser_navigation_skill_configmap.yaml  24_cron_management_skill_configmap.yaml  25_wiki_management_skill_configmap.yaml  26_task_tracking_skill_configmap.yaml  (+5 more)
scripts/: cron-inflight.py
src/: lib.rs  main.rs
(+64 files in other folders)
