[package]
name = "zeroclaw-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core contracts and boundaries for staged multi-crate extraction."

[lib]
path = "src/lib.rs"

[dependencies]
zeroclaw-types = { path = "../zeroclaw-types" }
zeroclaw-a2a-outbox = { path = "../zeroclaw-a2a-outbox" }
ra2a = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { workspace = true }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "test-util"] }
tower = { version = "0.5", features = ["util"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
http-body-util = "0.1"
